2009-09-15  Charles Wilson  <cwilso11@users.sourceforge.net>

	Release 0.4
	* README: Update.
	* Makefile.am: Ensure AC_CONFIG_MACRO_DIR is distributed,
	even if empty.
	* configure.ac: Update.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Remove pexports from mingw-utils; it is now a top-level module
	* pexports/AUTHORS, pexports/ChangeLog, pexports/COPYING,
	pexports/hlex.l, pexports/hparse.h, pexports/hparse.y,
	pexports/Makefile.am, pexports/pe.h, pexports/pexports.c,
	pexports/pexports.h. pexports/README, pexports/str_tree.c,
	pexports/str_tree.h: Removed.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Remove dos2unix and unix2dos: equivalent versions
	provided by the msys and mingw ports of 'cygutils'
	* dos2unix/COPYING, dos2unix/dos2unix.1,
	dos2unix/dos2unix.c, dos2unix/dos2unix.h,
	dos2unix/Makefile.am: Removed.
	* unix2dos/COPYING, unix2dos/Makefile.am,
	unix2dos/unix2dos.1, unix2dos/unix2dos.c,
	unix2dos/unix2dos.h: Removed.

2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Remove drmingw; it now has its own development site
	at http://code.google.com/p/jrfonseca/wiki/DrMingw
	* drmingw/bucomm.h, drmingw/budbg.h, drmingw/COPYING,
	drmingw/COPYING.LIB, drmingw/debug.c, drmingw/debug.h,
	drmingw/debugger.c, drmingw/debugger.h, drmingw/debugx.c,
	drmingw/dialog.c, drmingw/dialog.h, drmingw/doc/drmingw.html,
	drmingw/doc/drmingw.reg, drmingw/doc/exception-nt.gif,
	drmingw/doc/install.gif, drmingw/doc/sample.gif, drmingw/exchndl.c,
	drmingw/icon.ico, drmingw/ieee.c, drmingw/ieee.h,
	drmingw/include/aout/aout64.h, drmingw/include/aout/stab.def,
	drmingw/include/aout/stab_gnu.h, drmingw/include/coff/internal.h,
	drmingw/include/demangle.h, drmingw/include/dis-asm.h,
	drmingw/include/filenames.h, drmingw/include/getopt.h,
	drmingw/include/libcoff.h, drmingw/include/libiberty.h,
	drmingw/include/safe-ctype.h, drmingw/log.c, drmingw/log.h,
	drmingw/main.c, drmingw/Makefile.am, drmingw/misc.c,